--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -6,6 +6,9 @@ p
   line-height: 1.6em
   margin-top: 1.6em
 
+.popover-content p
+  margin: 0px
+
 .text li
   line-height: 1.6em
   margin-top: 0.8em
