--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,14 +2,17 @@
 
 - cache ['home', version, user_signed_in?] do
   .container
-    .video-container
-      %iframe{src: youtube_url(@filmstrip.first.youtube_id) }
-  .container#filmstrip-container
-    .filmstrip
-      - @filmstrip.each do |video|
-        .filmstrip-item{ data: {youtube: video.youtube_id, title: video.title, content: video.description} }
-          .filmstrip-item-img
-            = image_tag youtube_image(video.youtube_id,0)
+    .video-unit
+      .featured-and-filmstrip
+        #featured-video
+          .video-container
+            %iframe{src: youtube_url(@filmstrip.first.youtube_id) }
+        #filmstrip-container
+          .filmstrip
+            - @filmstrip.each do |video|
+              .filmstrip-item{ data: {youtube: video.youtube_id, title: video.title, content: video.description} }
+                .filmstrip-item-img
+                  = image_tag youtube_image(video.youtube_id,0)
 
   .hero-unit.signup-banner
     .container
