--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -6,9 +6,6 @@
   .caption.top-right, .caption.middle-right, .caption.bottom-right
     margin-left: -625px
 
-  .filmstrip-item-img
-    height: 125px
-
 @media (max-width: 1200px)
   .box-sort
     .images
@@ -25,9 +22,6 @@
     .image-pile img
       height: 210px
       width: 371px
-
-  .filmstrip-item-img
-    height: 100px
 
 /* Portrait tablet*/
 @media (max-width: 980px)
@@ -51,9 +45,6 @@
 
   .navbar-activity-title
     display: none
-
-  .filmstrip-item-img
-    height: 75px
 
 @media (max-width: 979px) and (min-width: 768px)
   #quiz-container
@@ -199,9 +190,6 @@
       text-align: left
       padding-left: 5px
 
-  .filmstrip-item-img
-    height: 55px
-
 /* Android phone. Weird inbetween*/
 @media (max-width: 520px)
   .user-form
@@ -334,12 +322,6 @@
       .option img
         max-width: 145px
 
-  #filmstrip-container
-    margin: 0px -20px
-
-  .filmstrip-item-img
-    height: 40px
-
 /* Everything but portrait iphone*/
 @media (max-width: 480px)
   .enter-email
@@ -383,3 +365,6 @@
         li.authentication
           a
             +font-serif-large
+
+  .featured-and-filmstrip
+    width: 100%
