--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -45,7 +45,8 @@
   position: relative
 
 .featured-and-filmstrip
-  width: 70%
+  width: 80%
+  float: left
 
 #featured-video
   width: 100%
@@ -62,12 +63,21 @@
   .filmstrip-item
     display: inline-block
     width: 20%
-    position: relative
-    box-sizing: border-box
-    padding: 5px
-    &:hover
-      cursor: pointer
-      opacity: .8
+
+.filmstrip-item
+  position: relative
+  box-sizing: border-box
+  padding: 5px
+  &:hover
+    cursor: pointer
+    opacity: .8
 
 .filmstrip-item-img
+
+.new-content
+  width: 20%
+  float: left
+  box-sizing: border-box
+  padding: 5px
+  text-align: center
 
