filmstrip title update

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,8 +14,11 @@
                 .filmstrip-thumbnail.crop
                   .filmstrip-img.croppable
                     = image_tag youtube_image(video.youtube_id, 0)
+                  .filmstrip-item-title
+                    = video.title
       .new-content
-        %h4 New Content
+        .new-content-header
+          %h4 New Content
         - @new_content.each do |activity|
           .filmstrip-item{ data: {youtube: activity.youtube_id} }
             .filmstrip-thumbnail.crop
