--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -47,6 +47,7 @@
 .featured-and-filmstrip
   width: 80%
   float: left
+  margin-top: 28px
 
 #featured-video
   width: 100%
@@ -68,11 +69,24 @@
   position: relative
   box-sizing: border-box
   padding: 5px
-  &:hover
-    cursor: pointer
-    opacity: .8
+  .filmstrip-thumbnail
+    background: black
+    position: relative
 
-.filmstrip-item-img
+.filmstrip-item-title
+  font-size: 15px
+  position: absolute
+  bottom: 0px
+  right: 0px
+  color: rgba(0,0,0,0)
+  box-sizing: border-box
+  width: 100%
+  height: 100%
+  padding: 20px 10px
+  &:hover
+    color: white
+    cursor: pointer
+    background: black
 
 .new-content
   width: 20%
@@ -80,6 +94,9 @@
   box-sizing: border-box
   padding: 5px
   text-align: center
+  .new-content-header
+    h4
+      margin: 0px
 
 .crop
   opacity: 0
