--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -1,3 +1,4 @@
+
 .signup-banner
   margin-bottom: 16px
   h2, h3
@@ -83,6 +84,11 @@
   width: 100%
   height: 100%
   padding: 20px 10px
+  background: none
+  transition: background 500ms
+  -webkit-transition: background 500ms
+  -moz-transition: background 500ms
+  -o-transition: background 500ms
   &:hover
     color: white
     cursor: pointer
