--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -202,3 +202,15 @@ iframe
 
 .tooltip-inner
   text-transform: none
+
+.slides_container
+  width: 770px
+  height: 433px
+  overflow: hidden
+
+  div
+    width: 770px
+    height: 433px
+    display: block
+
+
