--- a/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
+++ b/app/assets/stylesheets/application/courses/_course_breakdown.css.sass
@@ -3,7 +3,7 @@
     +font-serif-large
     color: $brick
     text-transform: none
-    margin-top: 3.2em
+    margin-top: 6px
 
 .nested-activity-list-shared, .nested-activity-list-pretty
 
