new content tweaks and more robust logic when no filmstrip present

--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -100,9 +100,16 @@
   box-sizing: border-box
   padding: 5px
   text-align: center
+  font-size: 12px
+  margin-bottom: 20px
   .new-content-header
     h4
       margin: 0px
+      font-size: 14px
+  a
+    float: left
+  .new-content-title
+    box-sizing: border-box
 
 .crop
   opacity: 0
