--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -204,6 +204,20 @@
     top: 10px
     margin-left: 100px
 
+  .featured-and-filmstrip
+    width: 100%
+
+  .new-content
+    width: 100%
+    padding: 0px
+    .filmstrip-item
+      width: 30%
+      float: left
+    .new-content-title
+      width: 70%
+      padding: 10px
+      float: left
+
 @media (max-width: 480px)
   /* ##################### */
   /* $SMARTHPHONE-CAROUSEL */
