switched from slides.js to responsiveslides

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -203,14 +203,4 @@ iframe
 .tooltip-inner
   text-transform: none
 
-.slides_container
-  width: 770px
-  height: 433px
-  overflow: hidden
-
-  div
-    width: 770px
-    height: 433px
-    display: block
-
-
+@import responsiveslides.css
