Import responsiveslide stylesheet, and while i'm at it, hopefully fix firefox fontawesome

--- a/app/assets/stylesheets/application.css.sass.erb
+++ b/app/assets/stylesheets/application.css.sass.erb
@@ -41,11 +41,13 @@
 @import application/media_queries
 
 @import application/colorbox
+@import application/responsiveslides
 
 
 @font-face
   font-family: "FontAwesome"
+  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot")
+  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
   font-style: normal
   font-weight: normal
-  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont-19ba21c59911720b41224c9f6ad0e64a.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont-97f946b8240f8d1902d0a015dd16a723.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
 
