--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,8 @@
 - content_for :title, "Free-to-Learn Culinary School"
 
 - cache ['home', version, user_signed_in?] do
+  .container
+    %h1 Chefsteps is a free to learn culinary school
   .hero-unit.hero-well.hero-home-video
     .container.signup-banner
       .row.top-video
