add header test

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 
 - cache ['home', version, user_signed_in?] do
   .container
-    %h1 Chefsteps is a free to learn culinary school
+    %h1 Chefsteps is a free to learn culinary school TEST TEST
   .hero-unit.hero-well.hero-home-video
     .container.signup-banner
       .row.top-video
