--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -45,10 +45,22 @@
   width: 100%
   position: relative
 
+#home-tagline
+  position: relative
+  h2
+    font-size: 24px
+    text-align: center
+    color: white
+    margin: 0px
+    .button#tagline-button
+      font-size: 18px
+      .inner
+        padding: 5px 10px
+
 .featured-and-filmstrip
-  width: 80%
-  float: left
-  margin-top: 28px
+  width: 70%
+  margin: 0px 15%
+
 
 #featured-video
   width: 100%
