--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -46,6 +46,10 @@
   .navbar-activity-title
     display: none
 
+  .featured-and-filmstrip
+    width: 100%
+    margin: 0px
+
 @media (max-width: 979px) and (min-width: 768px)
   #quiz-container
     .hero-unit .dials
