--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -14,6 +14,7 @@
   %ul
     %li= admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
     %li= link_to 'Add Box Sort Question', admin_quiz_questions_path(@quiz, question_type: 'box_sort'), method: :post, class: 'admin-button'
+    %li= link_to 'Add Order Sort Question', admin_quiz_order_sort_questions_path(@quiz), method: :post, class: 'admin-button'
   #question-count
     .count
     Questions
