--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,31 +1,31 @@
 .container
 
   .row
-    .span8.pull-left
-      %h3 From the Creators of Modernist Cuisine
+    .span12.pull-left
+      %h3 From Creators of <i>Modernist Cuisine: The Art and Science of Cooking</i>
       %ul.unstyled
         %li.instructor#instructor-chris
           .row
             .span2
               = image_tag('chris-large.jpg', title: 'Chris Young', class: 'img-profile')
-            .span6
+            .span8
               :markdown
                 #{bio_chris.copy.to_s}
           .row
-            .span8.horizontal-divider
+            .span10.horizontal-divider
         %li.instructor#instructor-grant
           .row
             .span2
               = image_tag('grant-large.jpg', title: 'Chris Young', class: 'img-profile')
-            .span6
+            .span8
               :markdown
                 #{bio_grant.copy.to_s}
           .row
-            .span8.horizontal-divider
+            .span10.horizontal-divider
         %li.instructor#instructor-ryan
           .row
             .span2
               = image_tag('ryan.jpg', title: 'Ryan Matthew Smith', class: 'img-profile')
-            .span6
+            .span8
               :markdown
                 #{bio_ryan.copy.to_s}
