updated new content and title to html safe

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,7 +21,7 @@
                     .filmstrip-img.croppable
                       = image_tag youtube_image(video.youtube_id, 0)
                     .filmstrip-item-title
-                      = video.title
+                      = video.title.html_safe
 
   .hero-unit.signup-banner
     .container
