--- a/app/views/activities/_step_by_step.html.haml
+++ b/app/views/activities/_step_by_step.html.haml
@@ -1,5 +1,5 @@
 .hero-unit.hero-well.hero-step-by-step
-  .container.step-by-step
+  .container.step-by-step{:itemprop => "recipeInstructions"}
     - if activity.recipe_steps.any?
       - activity.ordered_recipe_steps.each_with_index do |recipe_step, i|
         = render 'step', step: recipe_step, count: i
