--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -6,21 +6,23 @@
   - content_for :canonical_link, activity_url
   - course = Course.find(params[:course_id]) if params[:course_id]
 
-  = render 'courses/navigation', course: course, activity: activity, disqus_id: disqus_id
+  .recipe_schema{:itemscope => true, :itemtype => (activity.has_recipes? ? "http://schema.org/Recipe" : nil)}
 
-  .hero-unit.hero-well.noprint.activity-hero
-    .container
-      - if activity.youtube_id?
-        .row.top-video
-          .span12
-            .video-container
-              %iframe{src: youtube_url(activity.youtube_id)}
+    = render 'courses/navigation', course: course, activity: activity, disqus_id: disqus_id
 
-  = render 'overview', activity: activity
-  -if activity.steps.any? || activity.recipe_steps.any?
-    #step-by-step
-      = render 'step_by_step', activity: activity
-  = render 'quizzes', activity: activity
-  = render 'cooked_this_button', activity: activity
+    .hero-unit.hero-well.noprint.activity-hero
+      .container
+        - if activity.youtube_id?
+          .row.top-video
+            .span12
+              .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
+                %iframe{src: youtube_url(activity.youtube_id)}
+
+    = render 'overview', activity: activity
+    -if activity.steps.any? || activity.recipe_steps.any?
+      #step-by-step
+        = render 'step_by_step', activity: activity
+    = render 'quizzes', activity: activity
+    = render 'cooked_this_button', activity: activity
 
   = render 'layouts/disqus_comments', disqus_id: disqus_id, disqus_title: activity.title, disqus_url: activity_url
