infotip in step ingredients, moved cooked-this pot

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -25,6 +25,10 @@
       list-style-type: disc
       +font-sans-medium
 
+  .spec-column
+    h5
+      margin-top: 20px
+
 table.ingredients
   margin-top: 20px
   width: 100%
