--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -9,7 +9,7 @@
       %th#ingredient Ingredient
       %th#quantity{colspan: 2}
         %a.change_units{title: "Click to change units"} Quantity
-        %a#recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
+        %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
           %i.icon-question-sign
 
   %tbody
