--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -14,6 +14,8 @@
               %th#ingredient Ingredient
               %th#quantity{colspan: 2}
                 %a.change_units{title: "Click to change units"} Quantity
+                %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
+                  %i.icon-question-sign
 
           - step.ingredients.each do |ingredient|
             %tr
