--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -12,6 +12,7 @@
       = render 'ingredient_form', ingredient: nil
       - @recipe.ingredients.ordered.each do |ingredient|
         = render 'ingredient_form', ingredient: ingredient
+    %li= copy_button 'Add Ingredient', '#ingredient-row', 'table#ingredients'
 
   = section("Steps", f) do
     %li.two-button-row
