--- a/app/views/admin/recipes/_step_ingredient_form.html.haml
+++ b/app/views/admin/recipes/_step_ingredient_form.html.haml
@@ -11,4 +11,5 @@
   = render 'ingredient_form', ingredient: nil, ingredients: ingredients, row_id: row_id, field_name_prefix: field_name_prefix
   - step.ingredients.each do |ingredient|
     = render 'ingredient_form', ingredient: ingredient, ingredients: ingredients, field_name_prefix: field_name_prefix
+%li= copy_button 'Add Ingredient To Step', "##{row_id}", "table#step-#{count}-ingredients"
 
