change transcription to transcript

--- a/app/assets/stylesheets/application/_video.css.sass
+++ b/app/assets/stylesheets/application/_video.css.sass
@@ -1,6 +1,6 @@
-.transcription
+.transcript
   .btn
     margin: 10px 0px
-  .transcription-content
+  .transcript-content
     float: right
     color: black
