transcript css updates

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -6,6 +6,9 @@
     +font-serif-medium
     color: $gray
     text-transform: uppercase
+  p
+    font-weight: 200
+    line-height: 27px
   .horizontal-divider
     margin: 10px 0
   .difficulty
