--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -1,6 +1,5 @@
 .step-by-step
   margin-top: 40px
-  padding-top: 20px
   h4
     +font-serif-large
     color: $brick
@@ -42,7 +41,7 @@
 
 .hero-step-by-step
   margin-top: 0px
-  padding-bottom: 20px
+  padding: 0px 0px 20px
   margin-bottom: 0
   .container
     margin-top: 0px
@@ -55,10 +54,6 @@
     margin-top: 0.8em
   p
     margin-top: 0
-  p, li, > *
-    font-weight: normal
-    font-size: 16px
-    line-height: 18px
-    margin-bottom: 0.8em
+  font-size: 16px
 
 
