--- a/app/assets/stylesheets/application/courses/_show.css.sass
+++ b/app/assets/stylesheets/application/courses/_show.css.sass
@@ -6,6 +6,8 @@
 .course-info
   font-weight: 200
   line-height: 27px
+  p
+    padding: 20px 0px 0px
   h1
     +font-serif-large
     color: $brick
