transcript attr accessible

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -20,6 +20,9 @@
             %th Youtube Id
             %td= activity.youtube_id
           %tr
+            %th Transcript
+            %td= activity.transcript
+          %tr
             %th Timing
             %td= activity.timing
           %tr
