ability to add subrecipe title

--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -3,8 +3,7 @@
     %h3.step_title
       %strong= step.title(count)
     - if step.ingredients.any?
-      .well.subrecipe
-        .subrecipe-title= step.subrecipe_title
+      .well
         %table.ingredients
           %colgroup
             %col{width: "66%"}
@@ -12,7 +11,7 @@
             %col{width: "6%"}
           %thead
             %tr
-              %th#ingredient Ingredient
+              %th#ingredient= step.step.subrecipe_title
               %th#quantity{colspan: 2}
                 %a.change_units{title: "Click to change units"} Quantity
                 %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
