update navigation title

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -38,6 +38,10 @@
 .activity-hero
   padding-bottom: 0px
   margin-bottom: 0px
+  h1
+    padding: 20px 0px
+  .video-container
+    @include shadow
 
 .hero-comments
   margin-bottom: 0
