--- a/app/assets/stylesheets/application/_navigation.css.sass
+++ b/app/assets/stylesheets/application/_navigation.css.sass
@@ -12,7 +12,8 @@
 
   .navbar-inner
     background: none
-    color: $white
+    //color: $white
+    padding: 0px
     .navbar-activity-title
       .navbar-text
         width: 415px
@@ -28,7 +29,7 @@
     font-weight: bold
     li
       position: relative
-      padding: 0 5px
+      padding: 0px
       &:before
         content: ''
         display: inline-block
