--- a/app/views/courses/_navigation.html.haml
+++ b/app/views/courses/_navigation.html.haml
@@ -7,7 +7,7 @@
         %ul.nav.nav-activities
           %li.navbar-activity-title
             .navbar-text{:itemprop => "name"}
-              %h4= raw activity.title
+              / %h4= raw activity.title
 
         %ul.nav.nav-anchors.pull-right
           - if course && (prev_activity = course.prev_published_activity(activity))
