--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -9,8 +9,19 @@
 
 .step
   color: $black
-  padding: 20px 0px
-  border-bottom : 2px solid $grayLight
+  padding: 0px
+  margin: 10px 0px
+  float: left
+  width: 100%
+  @include shadow
+  .step-directions-col
+    float: left
+    width: 50%
+    padding: 10px 20px
+    @include box-sizing-border
+  .step-img-col
+    float: right
+    width: 50%
   h3
     +font-serif-medium
   strong
