implemented suggestions from ryan

--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -1,7 +1,7 @@
 #overview
   padding: 20px
   h1
-    +font-serif-large
+    font-size: 36px
     color: $brick
   h5
     +font-serif-medium
@@ -10,7 +10,7 @@
   p
     font-weight: 200
     line-height: 27px
-    margin: 20px 0px
+    margin: 20px 20px
   .horizontal-divider
     margin: 10px 0
   .difficulty
