--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -17,19 +17,21 @@
   .step-directions-col
     float: left
     width: 50%
-    padding: 10px 20px
+    padding: 10px 50px 20px 20px
     @include box-sizing-border
   .step-img-col
     float: right
     width: 50%
   h3
-    +font-serif-medium
+    +font-sans-small
   strong
     color: $black
     font-weight: normal
   h6
-    +font-sans-medium
+    +font-sans-small
     color: $brick
+  p
+    +font-sans-small
   table
     width: 100%
     .quantity
