--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -229,8 +229,18 @@
   .step
     .step-directions-col
       width: 100%
+      padding: 10px 20px 20px
     .step-img-col
       width: 100%
+
+  .activity-hero
+    h1
+      padding: 5px 0px
+      font-size: 24px
+      text-align: center
+
+  #overview
+    padding: 5px 0px
 
 @media (max-width: 480px)
   /* ##################### */
