Add bootleg method of updating the question solutions.

--- a/app/views/admin/order_sort_questions/_edit.html.haml
+++ b/app/views/admin/order_sort_questions/_edit.html.haml
@@ -6,6 +6,15 @@
 
 %h2 Order Sort Question for "#{@question.quiz.title}"
 
+= semantic_form_for [:admin, @question], url: admin_order_sort_question_path(@question) do |f|
+  = f.inputs name: "Question Details" do
+    = f.input :question, input_html: { value: @question.question }
+    = f.input :instructions, input_html: { value: @question.instructions }
+    = f.input :solutions, input_html: { value: solution_image_ids(@question) }
+
+  = f.actions do
+    = f.action :submit, label: 'Save Question'
+
 #image-uploader
   #image-list
     .image.image-placeholder{ data: {behavior: 'filepicker'}}
