--- a/app/assets/stylesheets/application.css.sass.erb
+++ b/app/assets/stylesheets/application.css.sass.erb
@@ -43,6 +43,7 @@
 @import application/colorbox
 @import application/responsiveslides
 @import application/video
+@import application/box
 
 
 @font-face
