--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -4,7 +4,7 @@
     _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
     _gaq.push(['_setAccount', 'UA-34555970-1']);
     _gaq.push(['_setDomainName', 'chefsteps.com']);
-    _gaq.push(['_setIgnoreRef', 'chefsteps.com']);
+    _gaq.push(['_addIgnoredRef', 'chefsteps.com']);
     _gaq.push(['_trackPageview']);
 
     (function() {
