--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,11 +1,13 @@
 .container
-  %h2 Search Results
+  %h2 Search Chefsteps
   = form_tag '/search', :method => :get do
-    = text_field_tag :q, nil, :placeholder => 'Search'
-  - @results.each do |result|
-    .box.box-small
-      = link_to activity_path(result) do
-        %h4= result.title
-        / - result.step_images.each do |image|
-        /   = s3_image_url(image)
-        = image_tag s3_image_url(result.step_images.first)
+    = text_field_tag :q, nil, :placeholder => 'Example: sous vide'
+  - if @results
+    - @results.each do |result|
+      .box.box-small
+        = link_to activity_path(result) do
+          %h4= result.title
+          / - result.step_images.each do |image|
+          /   = s3_image_url(image)
+          - if result.step_images.any?
+            = image_tag s3_image_url(result.step_images.first)
