--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -1,10 +1,14 @@
+.search-container
+  text-align: center
+
 .box
-  float: left
+  display: inline-block
   width: 300px
   height: 233px
   margin: 20px
   @include shadow
   @include box-sizing-border
   h4
-    padding: 5px 10px
+    padding: 5px 15px
     height: 36px
+    text-align: center
