--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,7 +1,9 @@
-.container
+.container.search-container
   %h2 Search Chefsteps
   = form_tag '/search', :method => :get do
     = text_field_tag :q, nil, :placeholder => 'Example: sous vide'
+    = submit_tag 'Search', class: 'btn btn-primary'
+
   - if @results
     - @results.each do |result|
       .box.box-small
