--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,6 +1,6 @@
 .container.search-container
   %h2 Search Chefsteps
-  = form_tag '/search', :method => :get do
+  = form_tag '/search', :method => :get, class: 'form-inline' do
     = text_field_tag :q, nil, :placeholder => 'Example: sous vide'
     = submit_tag 'Search', class: 'btn btn-primary'
 
