--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -4,11 +4,22 @@
 .box
   display: inline-block
   width: 300px
-  height: 233px
+  height: 169px
   margin: 20px
+  position: relative
   @include shadow
   @include box-sizing-border
   h4
-    padding: 5px 15px
-    height: 36px
+    padding: 5px
+    margin: 0px
+    background: rgba(0,0,0,.5)
+    color: white
+    width: 100%
+    @include box-sizing-border
     text-align: center
+    position: absolute
+    bottom: 0px
+    +font-sans-medium
+    font-weight: 100
+    letter-spacing: 1px
+
