--- a/app/assets/stylesheets/application/_box.css.sass
+++ b/app/assets/stylesheets/application/_box.css.sass
@@ -21,5 +21,6 @@
     bottom: 0px
     +font-sans-medium
     font-weight: 100
-    letter-spacing: 1px
+    letter-spacing: 2px
+    font-size: 13px
 
